# data-quality-summarizer

./: .flake8  .gitignore  CLAUDE.md  COLUMN_SUMMARY.md  README.md  create_test_data.py  debug_model_predictions.py  debug_pipeline.py  generate_large_test_data.py  index.html  jest.config.cjs  ml_analysis_visualization.py  ml_pipeline_demo_summary.py  package-lock.json  package.json  pyproject.toml  sample_input.csv  sample_rules.json  simple_validation.py  test_feature_debug.py  test_rules.json  test_ui_integration.js  tsconfig.json  vite.config.ts
.claude/: settings.local.json
.github/workflows/: ml_pipeline_integration.yml
scripts/: create_prediction_graphs.py  debug_business_date_latest.py  debug_long_date_range.py  debug_model_features.py  debug_predictions.py  debug_same_date.py  debug_week_boundaries.py  debug_week_calculation.py  demo_predictions.py  generate_sample_data.py  generate_test_data.py  generate_test_rules.py  simple_ml_visualization.py  start_ui_server.py  validate_model.py
src/: __main__.py  aggregator.py  rules.py  setupTests.ts  summarizer.py
test_data/: WEEKLY_AGGREGATION_SHOWCASE.md  WEEKLY_FEATURE_COMPARISON.md  weekly_demo_rules.json
test_output/: sample_input_nl.txt
tests/: __init__.py  test_aggregator.py  test_api.py  test_data_validator.py  test_feature_imputation.py  test_ingestion.py  test_main.py  test_model_training_integration.py  test_rules.py  test_stage2_enhanced_features.py  test_stage3_comprehensive_validation.py  test_summarizer.py
ui/: index.html  package-lock.json  package.json  tailwind.config.js  vite.config.ts
(+137 files in other folders)
